# CPPTools

./: .gitignore  CMakeLists.txt  README.md
cmake modules/: FindConfigPackage.cmake
src/: config.h  main.cpp
templates/: cmake_uninstall.cmake.in  pkg-config.pc.in
